<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <TextView
            android:text="@string/main_activity_text_size_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar"
            android:max="60"
            android:layout_weight="1"
            />

        <CheckBox
            android:id="@+id/checkbox_show_guidelines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_show_guidelines_text"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <TextView
            android:text="@string/main_activity_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/source_text"
            android:hint="@string/main_activity_hint_source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- useless RelativeLayout, just to avoid pollution in CenteredTextView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <org.fpezzato.countertextview.CenteredTextView
            android:id="@+id/centered_text_view"
            android:text="@string/main_activity_demo_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="5sp"
            android:background="@android:color/darker_gray"
            app:rounded_background_color="@color/rounded_background_color"
            app:show_guidelines="false"
            />
    </RelativeLayout>
</LinearLayout>
